extern/Hexapod/win_32/XPS_Q8_drivers.bas

Declare Function PositionerCorrectorSR1ObserverAccelerationSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal ParameterA As Double, ByVal ParameterB As Double, ByVal ParameterC As Double) As Integer '  Update SR1 corrector observer parameters
Declare Function PositionerCorrectorSR1ObserverAccelerationGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ParameterA As Double, ParameterB As Double, ParameterC As Double) As Integer '  Read SR1 corrector observer parameters
Declare Function PositionerCorrectorSR1OffsetAccelerationSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal AccelerationOffset As Double) As Integer '  Update SR1 corrector output acceleration offset
Declare Function PositionerCorrectorSR1OffsetAccelerationGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, AccelerationOffset As Double) As Integer '  Read SR1 corrector output acceleration offset
Declare Function PositionerCorrectorTypeGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal CorrectorType As String) As Integer '  Read corrector type
Declare Function PositionerCurrentVelocityAccelerationFiltersSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal CurrentVelocityCutOffFrequency As Double, ByVal CurrentAccelerationCutOffFrequency As Double) As Integer '  Set current velocity and acceleration cut off frequencies
Declare Function PositionerCurrentVelocityAccelerationFiltersGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, CurrentVelocityCutOffFrequency As Double, CurrentAccelerationCutOffFrequency As Double) As Integer '  Get current velocity and acceleration cut off frequencies
Declare Function PositionerDriverFiltersGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, KI As Double, NotchFrequency As Double, NotchBandwidth As Double, NotchGain As Double, LowpassFrequency As Double) As Integer '  Get driver filters parameters
Declare Function PositionerDriverFiltersSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal KI As Double, ByVal NotchFrequency As Double, ByVal NotchBandwidth As Double, ByVal NotchGain As Double, ByVal LowpassFrequency As Double) As Integer '  Set driver filters parameters
Declare Function PositionerDriverPositionOffsetsGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, StagePositionOffset As Double, GagePositionOffset As Double) As Integer '  Get driver stage and gage position offset
Declare Function PositionerDriverStatusGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, DriverStatus As Integer) As Integer '  Read positioner driver status
Declare Function PositionerDriverStatusStringGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerDriverStatus As Integer, ByVal PositionerDriverStatusString As String) As Integer '  Return the positioner driver status string corresponding to the positioner error code
Declare Function PositionerEncoderAmplitudeValuesGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, CalibrationSinusAmplitude As Double, CurrentSinusAmplitude As Double, CalibrationCosinusAmplitude As Double, CurrentCosinusAmplitude As Double) As Integer '  Read analog interpolated encoder amplitude values
Declare Function PositionerEncoderCalibrationParametersGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, SinusOffset As Double, CosinusOffset As Double, DifferentialGain As Double, PhaseCompensation As Double) As Integer '  Read analog interpolated encoder calibration parameters
Declare Function PositionerErrorGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ErrorCode As Integer) As Integer '  Read and clear positioner error code
Declare Function PositionerErrorRead Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ErrorCode As Integer) As Integer '  Read only positioner error code without clear it
Declare Function PositionerErrorStringGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerErrorCode As Integer, ByVal PositionerErrorString As String) As Integer '  Return the positioner status string corresponding to the positioner error code
Declare Function PositionerExcitationSignalGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, Mode As Integer, Frequency As Double, Amplitude As Double, Time As Double) As Integer '  Get excitation signal mode
Declare Function PositionerExcitationSignalSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal Mode As Integer, ByVal Frequency As Double, ByVal Amplitude As Double, ByVal Time As Double) As Integer '  Set excitation signal mode
Declare Function PositionerHardwareStatusGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, HardwareStatus As Integer) As Integer '  Read positioner hardware status
Declare Function PositionerHardwareStatusStringGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerHardwareStatus As Integer, ByVal PositionerHardwareStatusString As String) As Integer '  Return the positioner hardware status string corresponding to the positioner error code
Declare Function PositionerHardInterpolatorFactorGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, InterpolationFactor As Integer) As Integer '  Get hard interpolator parameters
Declare Function PositionerHardInterpolatorFactorSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal InterpolationFactor As Integer) As Integer '  Set hard interpolator parameters
Declare Function PositionerHardInterpolatorPositionGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, Position As Double) As Integer '  Read external latch position
Declare Function PositionerMaximumVelocityAndAccelerationGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, MaximumVelocity As Double, MaximumAcceleration As Double) As Integer '  Return maximum velocity and acceleration of the positioner
Declare Function PositionerMotionDoneGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, PositionWindow As Double, VelocityWindow As Double, CheckingTime As Double, MeanPeriod As Double, TimeOut As Double) As Integer '  Read motion done parameters
Declare Function PositionerMotionDoneSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal PositionWindow As Double, ByVal VelocityWindow As Double, ByVal CheckingTime As Double, ByVal MeanPeriod As Double, ByVal TimeOut As Double) As Integer '  Update motion done parameters
Declare Function PositionerPositionCompareAquadBAlwaysEnable Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String) As Integer '  Enable AquadB signal in always mode
Declare Function PositionerPositionCompareAquadBWindowedGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, MinimumPosition As Double, MaximumPosition As Double, EnableState As Boolean) As Integer '  Read position compare AquadB windowed parameters
Declare Function PositionerPositionCompareAquadBWindowedSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal MinimumPosition As Double, ByVal MaximumPosition As Double) As Integer '  Set position compare AquadB windowed parameters
Declare Function PositionerPositionCompareGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, MinimumPosition As Double, MaximumPosition As Double, PositionStep As Double, EnableState As Boolean) As Integer '  Read position compare parameters
Declare Function PositionerPositionCompareSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal MinimumPosition As Double, ByVal MaximumPosition As Double, ByVal PositionStep As Double) As Integer '  Set position compare parameters
Declare Function PositionerPositionCompareEnable Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String) As Integer '  Enable position compare
Declare Function PositionerPositionCompareDisable Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String) As Integer '  Disable position compare
Declare Function PositionerPositionComparePulseParametersGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, PCOPulseWidth As Double, EncoderSettlingTime As Double) As Integer '  Get position compare PCO pulse parameters
Declare Function PositionerPositionComparePulseParametersSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal PCOPulseWidth As Double, ByVal EncoderSettlingTime As Double) As Integer '  Set position compare PCO pulse parameters
Declare Function PositionerPositionCompareScanAccelerationLimitGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ScanAccelerationLimit As Double) As Integer '  Get position compare scan acceleration limit
Declare Function PositionerPositionCompareScanAccelerationLimitSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal ScanAccelerationLimit As Double) As Integer '  Set position compare scan acceleration limit
Declare Function PositionerPreCorrectorExcitationSignalGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, Frequency As Double, Amplitude As Double, Time As Double) As Integer '  Get pre-corrector excitation signal mode
Declare Function PositionerPreCorrectorExcitationSignalSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal Frequency As Double, ByVal Amplitude As Double, ByVal Time As Double) As Integer '  Set pre-corrector excitation signal mode
Declare Function PositionerRawEncoderPositionGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal UserEncoderPosition As Double, RawEncoderPosition As Double) As Integer '  Get the raw encoder position
Declare Function PositionersEncoderIndexDifferenceGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, distance As Double) As Integer '  Return the difference between index of primary axis and secondary axis (only after homesearch)
Declare Function PositionerSGammaExactVelocityAjustedDisplacementGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal DesiredDisplacement As Double, AdjustedDisplacement As Double) As Integer '  Return adjusted displacement to get exact velocity
Declare Function PositionerSGammaParametersGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, Velocity As Double, Acceleration As Double, MinimumTjerkTime As Double, MaximumTjerkTime As Double) As Integer '  Read dynamic parameters for one axe of a group for a future displacement 
Declare Function PositionerSGammaParametersSet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, ByVal Velocity As Double, ByVal Acceleration As Double, ByVal MinimumTjerkTime As Double, ByVal MaximumTjerkTime As Double) As Integer '  Update dynamic parameters for one axe of a group for a future displacement
Declare Function PositionerSGammaPreviousMotionTimesGet Lib "XPS_Q8_drivers.dll" (ByVal SocketIndex As Long, ByVal PositionerName As String, SettingTime As Double, SettlingTime As Double) As Integer '  Read SettingTime and SettlingTime
